# aml_3303

./: exercise1.py
assignment1/: README.md  Software_emerging_tools_assignment.ipynb
assignment2/: .gitignore  README.md  pyproject.toml
assignment2/src/: main_notebook.ipynb  send_dataset_bucket.py
